Add capacity middleware
