# middleware/agi/capacity/handler.go
@@ -1,0 +1,210 @@
+package capacity
+
+import (
+	"context"
+
+	wlog "github.com/NpoolPlatform/kunman/framework/wlog"
+	npool "github.com/NpoolPlatform/kunman/message/agi/middleware/v1/capacity"
+	types "github.com/NpoolPlatform/kunman/message/basetypes/agi/v1"
+	capacitycrud "github.com/NpoolPlatform/kunman/middleware/agi/crud/capacity"
+	constant "github.com/NpoolPlatform/kunman/pkg/const"
+	cruder "github.com/NpoolPlatform/kunman/pkg/cruder/cruder"
+
+	"github.com/google/uuid"
+)
+
+type Handler struct {
+	capacitycrud.Req
+	CapacityConds *capacitycrud.Conds
+	Offset        int32
+	Limit         int32
+}
+
+func NewHandler(ctx context.Context, options ...func(context.Context, *Handler) error) (*Handler, error) {
+	handler := &Handler{
+		CapacityConds: &capacitycrud.Conds{},
+	}
+	for _, opt := range options {
+		if err := opt(ctx, handler); err != nil {
+			return nil, wlog.WrapError(err)
+		}
+	}
+	return handler, nil
+}
+
+func WithID(id *uint32, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if id == nil {
+			if must {
+				return wlog.Errorf("invalid id")
+			}
+			return nil
+		}
+		h.ID = id
+		return nil
+	}
+}
+
+func WithEntID(id *string, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if id == nil {
+			if must {
+				return wlog.Errorf("invalid entid")
+			}
+			return nil
+		}
+		_id, err := uuid.Parse(*id)
+		if err != nil {
+			return wlog.WrapError(err)
+		}
+		h.EntID = &_id
+		return nil
+	}
+}
+
+func WithAppGoodID(id *string, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if id == nil {
+			if must {
+				return wlog.Errorf("invalid appgoodid")
+			}
+			return nil
+		}
+		_id, err := uuid.Parse(*id)
+		if err != nil {
+			return wlog.WrapError(err)
+		}
+		h.AppGoodID = &_id
+		return nil
+	}
+}
+
+func WithCapacityKey(e *types.CapacityKey, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if e == nil {
+			if must {
+				return wlog.Errorf("invalid capacitykey")
+			}
+			return nil
+		}
+		h.CapacityKey = e
+		return nil
+	}
+}
+
+func WithValue(s *string, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if s == nil {
+			if must {
+				return wlog.Errorf("invalid value")
+			}
+			return nil
+		}
+		h.Value = s
+		return nil
+	}
+}
+
+func WithDescription(s *string, must bool) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if s == nil {
+			if must {
+				return wlog.Errorf("invalid description")
+			}
+			return nil
+		}
+		h.Description = s
+		return nil
+	}
+}
+
+func (h *Handler) withCapacityConds(conds *npool.Conds) error {
+	if conds.ID != nil {
+		h.CapacityConds.ID = &cruder.Cond{
+			Op:  conds.GetID().GetOp(),
+			Val: conds.GetID().GetValue(),
+		}
+	}
+	if conds.IDs != nil {
+		h.CapacityConds.IDs = &cruder.Cond{
+			Op:  conds.GetIDs().GetOp(),
+			Val: conds.GetIDs().GetValue(),
+		}
+	}
+	if conds.EntID != nil {
+		id, err := uuid.Parse(conds.GetEntID().GetValue())
+		if err != nil {
+			return wlog.WrapError(err)
+		}
+		h.CapacityConds.EntID = &cruder.Cond{
+			Op:  conds.GetEntID().GetOp(),
+			Val: id,
+		}
+	}
+	if conds.EntIDs != nil {
+		ids := []uuid.UUID{}
+		for _, id := range conds.GetEntIDs().GetValue() {
+			_id, err := uuid.Parse(id)
+			if err != nil {
+				return wlog.WrapError(err)
+			}
+			ids = append(ids, _id)
+		}
+		h.CapacityConds.EntIDs = &cruder.Cond{
+			Op:  conds.GetEntIDs().GetOp(),
+			Val: ids,
+		}
+	}
+	if conds.AppGoodID != nil {
+		id, err := uuid.Parse(conds.GetAppGoodID().GetValue())
+		if err != nil {
+			return wlog.WrapError(err)
+		}
+		h.CapacityConds.AppGoodID = &cruder.Cond{
+			Op:  conds.GetAppGoodID().GetOp(),
+			Val: id,
+		}
+	}
+	if conds.AppGoodIDs != nil {
+		ids := []uuid.UUID{}
+		for _, id := range conds.GetAppGoodIDs().GetValue() {
+			_id, err := uuid.Parse(id)
+			if err != nil {
+				return wlog.WrapError(err)
+			}
+			ids = append(ids, _id)
+		}
+		h.CapacityConds.AppGoodIDs = &cruder.Cond{
+			Op:  conds.GetAppGoodIDs().GetOp(),
+			Val: ids,
+		}
+	}
+
+	return nil
+}
+
+func WithConds(conds *npool.Conds) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if conds == nil {
+			return nil
+		}
+		return h.withCapacityConds(conds)
+	}
+}
+
+func WithOffset(offset int32) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		h.Offset = offset
+		return nil
+	}
+}
+
+func WithLimit(limit int32) func(context.Context, *Handler) error {
+	return func(ctx context.Context, h *Handler) error {
+		if limit == 0 {
+			limit = constant.DefaultRowLimit
+		}
+		h.Limit = limit
+		return nil
+	}
+}
